--- a/signup_form.html
+++ b/signup_form.html
@@ -4,14 +4,124 @@
         <title>Signup</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <style>
+            body, * {
+                font-family: Arial, Helvetica, sans-serif;
+                box-sizing: border-box;
+            }
+
+            .modal {
+                background-color: hsl(221, 13%, 32%);
+                padding-top: 50px;
+                position: fixed;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                z-index: 1;
+                overflow: auto;
+                /*display: none;*/
+
+            }
+            .modal-content {
+                background-color: #fefefe;
+                margin: 5% auto 15% auto;
+                border: 1px solid #888;
+                width: 75%;
+
+            }
+
+            hr {
+                border: 1px solid #f1f1f1;
+                margin-bottom: 25px;
+            }
+
+            .close-modal {
+                color: #f1f1f1;
+                font-weight: bold;
+                font-size: 40px;
+                position: absolute;
+                top: 15px;
+                right: 35px;
+            }
+
+            .close-modal:hover,
+            .close-modal:focus {
+                color: #f44336;
+                cursor: pointer;
+            }
+
+            .container {
+                padding: 15px;
+            }
+
+            input[type=text],
+            input[type=password],
+            input[type=email] {
+                width: 100%;
+                padding: 15px;
+                margin: 5px 0 22px 0;
+                display: inline-block;
+                border: none;
+            }
+
+            input[type=text]:focus,
+            input[type=password]:focus,
+            input[type=email]:focus {
+                background-color: #ddd;
+                outline: none;
+            }
+
+            button {
+                background-color: #04AA6D;
+                color: white;
+                padding: 14px 20px;
+                margin: 8px 0;
+                border: none;
+                cursor: pointer;
+                width: 100%;
+                opacity: 0.9;
+            }
+
+            button:hover{
+                opacity: 1;
+            }
+
+            .cancelbtn {
+                padding: 14px 20px;
+                background-color: #f44336;
+            }
+
+            .cancelbtn, .signupbtn {
+                float: left;
+                width: 50%;
+            }
+
+            .clearfix::after {
+                content: "";
+                clear: both;
+                display: table;
+            }
+
+            @media screen and (max-width:300px) {
+                .cancelbtn, .signupbtn {
+                    width: 100%;
+                }
+            }
+        </style>
     </head>
     <body>
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account.</p>
+        <button type="button" id="popup-modal">Sign up</button>
+        <div class="modal">
+            <span class="close-modal">&times;</span>
 
-        <div>
-            <form>
-                <div>
+            <form action="#" method="post" class="modal-content">
+                <div class="container">
+                    <h1>Sign Up</h1>
+                    <p>Please fill in this form to create an account.</p>
+                    <hr>
+
                     <label for="uname">Username:</label>
                     <input type="text" name="uname" placeholder="Enter your name" required>
 
@@ -24,14 +134,17 @@
                     <label for="psw-repeat">Repeat Password:</label>
                     <input type="password" name="psw-repeat" placeholder="Repeat your password" required>
 
-                    <label for="remember">Remember me</label>
-                    <input type="checkbox" name="remember" id="remember">
+                    <label for="remember">
+                        <input type="checkbox" name="remember" id="remember" checked="checked">
+                        Remember me
+                    </label>
+                    
                 </div>
                 
-                <div>
+                <div class="clearfix">
                     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-                    <button type="button">Cancel</button>
-                    <button type="submit">Sign Up</button>
+                    <button type="button" class="cancelbtn">Cancel</button>
+                    <button type="submit" class="signupbtn">Sign Up</button>
 
                 </div>
             </form>
