--- a/signup_form.html
+++ b/signup_form.html
@@ -21,7 +21,7 @@
                 width: 100%;
                 z-index: 1;
                 overflow: auto;
-                /*display: none;*/
+                display: none;
 
             }
             .modal-content {
@@ -104,7 +104,11 @@
                 display: table;
             }
 
-            @media screen and (max-width:300px) {
+            #terms {
+                color: dodgerblue;
+            }
+
+            @media screen and (max-width: 300px) {
                 .cancelbtn, .signupbtn {
                     width: 100%;
                 }
@@ -142,7 +146,7 @@
                 </div>
                 
                 <div class="clearfix">
-                    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+                    <p>By creating an account you agree to our <a href="#" id="terms">Terms & Privacy</a>.</p>
                     <button type="button" class="cancelbtn">Cancel</button>
                     <button type="submit" class="signupbtn">Sign Up</button>
 
@@ -150,5 +154,24 @@
             </form>
         </div>
 
+
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                document.querySelector('.popup-modal').onclick = function() {
+                    document.querySelector('.modal').style.display = 'block';
+                }
+
+                document.querySelector('.close-modal').onclick = function() {
+                   document.querySelector('.modal').style.display = 'none'; 
+                }
+
+                window.onclick = event => {
+                    if(event.target == document.querySelector('.modal')) {
+                        document.querySelector('.modal').style.display = 'none';
+                    }
+                }
+
+            });
+        </script>
     </body>
 </html>
