--- a/register_form.html
+++ b/register_form.html
@@ -4,16 +4,22 @@
         <title>Register</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <style>
             * {
                 font-family: Arial, Helvetica, sans-serif;
                 box-sizing: border-box;
             }
+            body{
+                margin: 80px auto 80px auto;
+            }
 
             .container {
                 margin: 0 auto 15px auto;
                 width: 70%;
+                border: 1px solid #ccc;
+                padding: 10px;
             }
             
             .input-container {
